fixed some layout issues on the project and orgs pages, including proportional length of the stacked bars

--- a/app/assets/stylesheets/organizations-page.scss
+++ b/app/assets/stylesheets/organizations-page.scss
@@ -32,11 +32,21 @@
     }
 
     #organization-about {
-      > div {
+
+      div#organization-about-primary,
+      div#organization-about-secondary, {
         > div {
           @include make-md-column(6);
         }
       }
+
+      div#organization-about-tertiary {
+         > div {
+         @include make-md-column(12);
+        }
+      }
+
+
 
       #organization-address {
         @include make-md-column(12);
